...
				) : (
					<>
						<Stack.Screen
							name="Messages"
							component={MessagesScreen}
							options={{
								title: "Inbox",
							}}
						/>
						<Stack.Screen
							name="MessageDetail"
							component={MessageDetailScreen}
							options={({ route }) => ({
...
